<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16sp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:src="@drawable/topbarbutton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:padding="8sp"
            android:text="@string/context"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:padding="8sp"
            android:src="@drawable/input_field" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:padding="8dp"
            android:text="@string/dateAndHour"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:padding="8dp"
                android:src="@drawable/select_date_button" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:padding="8dp"
                android:src="@drawable/select_hour_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:padding="8dp"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:layoutDirection="rtl"
                android:padding="8dp"
                android:src="@drawable/select_hour_button"
                android:text="@string/departPlace"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:layoutDirection="rtl"
                android:padding="8dp"
                android:src="@drawable/select_hour_button"
                android:text="@string/arrivePlace"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>