<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.yourssu.design.system.atom.Picker" />

        <variable
            name="viewModel"
            type="com.sainfe.todowithspot.create.CreateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/create_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".create.CreateActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/backward_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/topbarbutton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@null"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:padding="8dp"
                android:text="@string/context"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.yourssu.design.system.atom.SimpleTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:padding="8dp"
                android:text="@string/dateAndHour"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/date_picker_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="showDatePickerDialog"
                    android:padding="8dp"
                    android:src="@drawable/select_date_button" />

                <ImageButton
                    android:id="@+id/time_picker_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="showTimePickerDialog"
                    android:padding="8dp"
                    android:src="@drawable/select_hour_button" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:padding="8dp"
                        android:text="@string/place"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/leave_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:enabled="false"
                            android:layoutDirection="rtl"
                            android:padding="8dp"
                            android:text="@string/departPlace"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15dp" />

                        <RadioButton
                            android:id="@+id/arrive_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:enabled="false"
                            android:layoutDirection="rtl"
                            android:padding="8dp"
                            android:text="@string/arrivePlace"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15dp" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>